# atrium

./: .gitignore  Cargo.toml  README.md  index.html  rust-toolchain.toml
.cargo/: config.toml
atrium2/: Cargo.toml  index.html
atrium2/.cargo/: config
atrium2/scss/: style.scss
atrium2/src/: main.rs
atrium2/src/comp/: app.rs
atrium_bulma/: Cargo.toml  index.html  launch.json
atrium_bulma/src/: main-backup.rs
atrium_bulma/src/components/: booking_form.rs  booking_page.rs  error_msg.rs  home_page.rs  mod.rs  modal_add.rs  modal_edit.rs  navbar.rs  user_page.rs
atrium_leptonic/: Cargo.toml  build.rs  index.html
atrium_leptonic/scss/: style.scss
atrium_leptonic/src/: app.rs  main.rs  routes.rs
atrium_leptonic/src/components/: layout.rs  mod.rs  sidebar.rs  topbar.rs
atrium_leptonic/src/pages/: err404.rs  mod.rs  welcome.rs
atrium_play/: play.sql
atrium_play/frontend/: Cargo.toml
atrium_play/frontend/src/: play.rs  store.rs
atrium_play/frontend/src/components/: app.rs
atrium_play/frontend/src/components/pages/: bookings.rs
atrium_play/frontend/src/components/widgets/: add_button.rs  mod.rs
atrium_play/frontend/static/: index.scss  superhero_overrides.scss
backend/: Cargo.toml  build.rs
backend/src/: server.rs
frontend/: Cargo.toml  build.rs  expanded.rs  expanded3  generate_tailwind.sh  index.html  tailwind.config.js
frontend/src/: enclose.rs  lib.rs  main.rs  state.rs  store.rs
frontend/src/components/: app.rs  booking_list.rs  db_agent.rs  db_context.rs  input_field.rs  mod.rs  user_add.rs  user_form.rs  user_list.rs
frontend/src/components/widgets/: add_button.rs  add_modal.rs  mod.rs  modal.rs
frontend/src/proto/: atrium.rs  mod.rs
frontend/static/: loading.css  utils.css
frontend/static/arse/bulma/: index.scss
old/backend/proto/: atrium.proto
old/backend/src/: client.rs  lib.rs
old/frontend/: expanded2.rs  proto
old/frontend/src/: main.rs  state.rs
old/frontend/src/components/: booking_list.rs  mod.rs  user_add.rs  user_list.rs
old/frontend/src/components/pages/: mod.rs
old/frontend/src/components/widgets/: add_modal.rs
scripts/: db.sh  dbclient.sh
scripts/testdata.db/: IDENTITY  LOG
src/: log.rs  main.rs  store.rs
src/components/: app.rs  booking_list.rs  mod.rs  modal.rs  modal_add.rs  modal_edit.rs  modaladd.rs  navbar.rs  user_form.rs  user_list.rs  useradd.rs  userlist.rs  userpage.rs
