[package]
 name = "atrium"
 version = "0.1.0"
 edition = "2021"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 leptonic = { git = "https://github.com/lpotthast/leptonic" }
 leptos = { version = "0.5.1", features = ["csr", "nightly"] }
 leptos-use = "0.8.0"
 leptos_icons = { version = "0.1.0", features = [
  "BsGithub",
  "BsPower",
  "BsList",
  "BsSearch",
  "BsThreeDots",
  "BsBook",
 ] }
 leptos_meta = { version = "0.5.1", features = ['csr'] }
 leptos_router = { version = "0.5.1", features = ['csr'] }
 surrealdb = "1.0.0"
 tokio = { version = "1.33.0", features = ["rt"] }
 wasm-bindgen = "0.2.87"

[build-dependencies]
 leptonic-theme = "0.2.0"
 leptos-tiptap-build = "0.2.4"
