[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "server"
path = "src/server.rs"

[[bin]] 
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-web = "0.5.0"
tower-http = "0.3.5"
http = "0.2.8"

[build-dependencies]
tonic-build = "0.8"
