[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "play"
path = "src/play.rs"

[[bin]]
name = "wasm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
once_cell = "1.17.0"
serde = "1.0.152"
surrealdb = {git="https://github.com/pscott31/surrealdb", default-features = false, features=["http", "protocol-http", "protocol-ws", "kv-mem"]} # path="../../sw/surrealdb/lib"
tokio = { version = "1.22.0", default-features = false, features = ["rt", "macros"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
ybc = {path="../../sw/ybc"}
yew = { version = "0.20", features = ["csr"] }
yew-agent = "0.2.0"
yew-hooks = "0.2.0"
yew_icons = { version="0.7.0", features=["font_awesome_regular", "font_awesome_solid"]}
yewdux = "0.9.0"

 